--- a/nonSchoolStudy/basics/index.html
+++ b/nonSchoolStudy/basics/index.html
@@ -31,7 +31,7 @@
                     console.log('a was pressed');
                 }
             });
-            // tutorial https://www.youtube.com/watch?v=EerdGm-ehJQ time stap: 10:46:00
+            // tutorial https://www.youtube.com/watch?v=EerdGm-ehJQ time stap: 10:58:32 exercises go do them
     </script>
 </body>
 </html>
