--- a/opdrachten school/user api op/index.html
+++ b/opdrachten school/user api op/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="title"></div>
+    <div id="out_data"></div>
+    <script src="users.js"></script>
 </body>
 </html>
