added nodejs package

--- a/opdrachten school/ajax/example/page.html
+++ b/opdrachten school/ajax/example/page.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="1png.png" alt="">
+    <!-- <img src="1png.png" alt=""> -->
+     <h1>hello</h1>
     
 </html>
